1.4.0/_sources/generated/tutorials/index.rst.txt
:orphan:

.. include:: ../../links.inc

Tutorials
=========

This page contains detailed tutorials using ``MNE-LSL``, presenting the different
objects and their features.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="LSL is an open-source networked middleware ecosystem to stream, receive, synchronize, and recor...">

.. only:: html

  .. image:: /generated/tutorials/images/thumb/sphx_glr_00_introduction_thumb.png
    :alt:

  :ref:`sphx_glr_generated_tutorials_00_introduction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to real-time LSL streams</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="LSL is a library designed for streaming time series data across different platforms and program...">

.. only:: html

  .. image:: /generated/tutorials/images/thumb/sphx_glr_10_low_level_API_thumb.png
    :alt:

  :ref:`sphx_glr_generated_tutorials_10_low_level_API.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Low-level LSL API</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Player with annotations">

.. only:: html

  .. image:: /generated/tutorials/images/thumb/sphx_glr_20_player_annotations_thumb.png
    :alt:

  :ref:`sphx_glr_generated_tutorials_20_player_annotations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Player with annotations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The StreamLSL object offers 2 mode of acquisition: automatic or manual. In automatic mode, the ...">

.. only:: html

  .. image:: /generated/tutorials/images/thumb/sphx_glr_30_stream_manual_thumb.png
    :alt:

  :ref:`sphx_glr_generated_tutorials_30_stream_manual.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automatic vs Manual acquisition</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /generated/tutorials/00_introduction
   /generated/tutorials/10_low_level_API
   /generated/tutorials/20_player_annotations
   /generated/tutorials/30_stream_manual


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </generated/tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </generated/tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
